WIP Layout Builder improvements

--- a/webroot/modules/custom/premium_theme_helper/layouts/hero_section/layout--hero-section.html.twig
+++ b/webroot/modules/custom/premium_theme_helper/layouts/hero_section/layout--hero-section.html.twig
@@ -27,3 +27,8 @@
     {{ content.content }}
   </div>
 </section>
+{% if breadcrumbs %}
+  <div id="block-breadcrumbs">
+    {{ breadcrumbs }}
+  </div>
+{% endif %}
