Theme style, theme and functionality changes

--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/fonts.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/fonts.css
@@ -3,4 +3,26 @@
  * Fonts.
  */
 
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:300,600|Roboto:300,400,500,700,900&display=swap");
+@font-face {
+  font-display: swap;
+  font-weight: 400;
+  font-family: "DM Sans";
+  font-style: normal;
+  src: url("../../../fonts/dm-sans-v17-latin-regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-weight: 500;
+  font-family: "DM Sans";
+  font-style: normal;
+  src: url("../../../fonts/dm-sans-v17-latin-500.woff2") format("woff2");
+}
+
+@font-face {
+  font-display: swap;
+  font-weight: 700;
+  font-family: "DM Sans";
+  font-style: normal;
+  src: url("../../../fonts/dm-sans-v17-latin-700.woff2") format("woff2");
+}
