--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/local-tasks.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/local-tasks.css
@@ -4,7 +4,8 @@
  */
 
 .local-tasks {
-  z-index: 13;
+  position: relative;
+  z-index: 100;
   display: flex;
   align-items: center;
   justify-content: center;
