--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/layout/grid.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/layout/grid.css
@@ -4,6 +4,7 @@
  */
 
 .section {
+  position: relative;
   padding-top: var(--grid-section-spacing-mobile);
   padding-bottom: var(--grid-section-spacing-mobile);
 
