--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/block/block--inline-block--accordion.html.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/block/block--inline-block--accordion.html.twig
@@ -39,12 +39,32 @@
   {{ title_prefix }}
   {{ title_suffix }}
   <h2 class="accordion__headline">{{ content.field_accordion_headline }}</h2>
-  <div class="accordion__items">{{ content.field_accordion_items }}</div>
+  <div class="accordion__items">
+    {% for key, accordion_item in content.field_accordion_items %}
+      {% if accordion_item['#paragraph'] %}
+        <div class="accordion-item js-accordion-item{{ key > 4 and show_more_text ? ' is-hidden' }}">
+          <button class="accordion-item__headline js-accordion-item__headline" aria-expanded="false" aria-controls="accordion-{{ accordion_item['#paragraph'].id.value }}" id="accordion-item-{{ accordion_item['#paragraph'].id.value }}">
+            <h3 class="h5 accordion-item__title">{{ accordion_item['#paragraph'].field_accordion_item_headline[0].value }}</h3>
+            <div class="accordion-item__icon"></div>
+          </button>
+          <div id="accordion-{{ accordion_item['#paragraph'].id.value }}" class="accordion-item__content" role="region" aria-labelledby="accordion-item-{{ accordion_item['#paragraph'].id.value }}">
+            <div class="accordion-item__text">
+              {% set accordion_text = {
+                '#type':   'processed_text',
+                '#text':    accordion_item['#paragraph'].field_accordion_item_text[0].value,
+                '#format': 'full_html',
+              } %}
+              {{ accordion_text }}
+            </div>
+          </div>
+        </div>
+      {% endif %}
+    {% endfor %}
+  </div>
   {% if items_count > 5 and show_more_text %}
-    <div v-show="!showAllHiddenItems">
-      <br>
-      <button {{ create_attribute().addClass(button_classes).setAttribute('@click.prevent', 'displayHiddenItems') }}>
-        {{ show_more_text }}
+    <div class="accordion__showmore-wrapper">
+      <button class="button accordion__showmore js-accordion__showmore" aria-label="{{ show_more_text }}">
+        <span class="accordion__showmore__text">{{ show_more_text }}</span>
       </button>
     </div>
   {% endif %}
