--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/block/block--inline-block--appetizer.html.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/block/block--inline-block--appetizer.html.twig
@@ -27,34 +27,35 @@
 #}
 {{ attach_library('premium/appetiser') }}
 
-{% set classes = [
-  'appetiser',
-  text_alignment ? 'appetiser--content-' ~ text_alignment,
-  orientation and not is_small_version ? 'appetiser--image-' ~ orientation,
-  is_small_version ? 'appetiser--small'
-] %}
 {% set orientation = content['#block_content'].field_appetizer_orientation.value %}
 {% set text_alignment = content['#block_content'].field_appetizer_text_alignment.value %}
 
-<div {{ attributes.addClass(classes) }}>
-  {{ title_prefix }}
-  {{ title_suffix }}
-  <div class="appetiser__content-wrapper">
-    {% if display_as_fullwidth %}
-    <div class="container">
-      {% endif %}
+{% set classes = [
+  'appetiser',
+  text_alignment ? 'appetiser--content-' ~ text_alignment,
+  orientation ? 'appetiser--image-' ~ orientation,
+  section_width == "section--width-full" ? 'appetiser--full-width',
+] %}
+
+{% if section_width == "section--width-full" %}
+<div class="container">
+{% endif %}
+  <div {{ attributes.addClass(classes) }}>
+    {{ title_prefix }}
+    {{ title_suffix }}
+    {% if media %}
+      <figure{{ create_attribute().addClass('appetiser__image') }}>
+        {{ media }}
+      </figure>
+    {% endif %}
+    <div class="appetiser__content-wrapper">
       <div class="appetiser__content">
         <h2 class="appetiser__title">{{ content.field_appetizer_headline }}</h2>
         <div class="appetiser__description">{{ content.field_appetizer_text }}</div>
         {{ content.field_appetizer_cta }}
       </div>
-      {% if display_as_fullwidth %}
     </div>
-    {% endif %}
   </div>
-  {% if media %}
-    <figure{{ create_attribute().addClass('appetiser__image') }}>
-      {{ media }}
-    </figure>
-  {% endif %}
+{% if section_width == "section--width-full" %}
 </div>
+{% endif %}
