--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/region/region--burgermenu.html.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/region/region--burgermenu.html.twig
@@ -16,24 +16,25 @@
 #}
 {{ attach_library('premium/burger-menu') }}
 
-<nav :class="{ 'burger-menu--open': isOpen }" class="burger-menu" id="js-burger-menu">
-  <div @click="closeBurgerMenu()" class="burger-menu__close">
-    <div class="burger-menu__close-label">{{ 'Close (Esc)'|t }}</div>
-    {% include '@reusable-component/svg-icon.twig' with {
-      'attributes': '',
-      'svgIconName': 'close'
-    } %}
-  </div>
-  <div class="container">
-    <div class="burger-menu__inner">
-      <div class="row">
-        <div class="col-xs-12 col-md-8 col-lg-6">
-          {{ elements.mainnavigation_bm }}
-        </div>
-        <div class="col-xs-12 col-md-4">
-          {{ elements.metamenu_bm }}
-        </div>
+<nav class="burger-menu js-burger-menu" id="js-burger-menu">
+  <div class="burger-menu__inner">
+    <div class="burger-menu__header">
+      <div class="burger-menu__logo">
+        <svg{{ (not attributes ? create_attribute() : attributes).addClass('logo__image') }}>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/{{ directory }}/logo.svg"></use>
+        </svg>
       </div>
+      <button id="js-burger-menu__close" class="burger-menu__close"  aria-label="Close navigation menu">
+        <div class="burger-menu__close-label">{{ 'Close'|t }}</div>
+        {% include '@reusable-component/svg-icon.twig' with {
+          'attributes': '',
+          'svgIconName': 'close'
+        } %}
+      </button>
+    </div>
+    <div class="container">
+      {{ elements.mainnavigation_bm }}
+      {{ elements.metamenu_bm }}
     </div>
   </div>
 </nav>
