--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/base.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/base.css
@@ -13,6 +13,15 @@
   }
 }
 
+:focus {
+  outline: none;
+}
+
+:focus-visible {
+  outline: 2px dashed var(--color-primary);
+  outline-offset: 2px;
+}
+
 /* Body */
 body {
   position: relative;
@@ -20,16 +29,16 @@ body {
   margin: 0;
   padding-top: var(--header-height-mobile);
   overflow-x: hidden;
-  color: var(--theme-color);
+  color: var(--theme-text-color);
   font-weight: var(--base-font-weight);
-  font-size: var(--base-font-size);
+  font-size: 17px;
   font-family: var(--base-font-family);
   line-height: 1.5;
   background-color: var(--site-background-color);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  @media (--viewport-md-min) {
+  @media (--viewport-lg-min) {
     padding-top: calc(var(--header-height) + var(--meta-menu-height));
   }
 
@@ -49,6 +58,11 @@ button {
   background: none;
   border: none;
   outline: none;
+
+  &:focus-visible {
+    outline: 2px dashed var(--color-primary);
+    outline-offset: 2px;
+  }
 }
 
 /* Horizontal ruler */
