--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/typography.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/typography.css
@@ -11,32 +11,43 @@ h5,
 h6 {
   margin-top: 0;
   margin-bottom: 10px;
+  color: var(--theme-color);
   font-weight: var(--heading-font-weight);
   font-family: var(--heading-font-family);
 }
 
-h1 {
-  font-size: var(--base-font-size-xxxlarge);
-  line-height: 1.2;
+h1,
+.h1 {
+  font-size: 125px;
+  line-height: 1;
+
+  #block-pageheader & {
+    text-align: center;
+  }
 }
 
-h2 {
-  font-size: var(--base-font-size-xxlarge);
-  line-height: 1.2;
+h2,
+.h2 {
+  font-size: 57px;
+  line-height: 1;
 }
 
-h3 {
-  font-size: var(--base-font-size-xlarge);
-  line-height: 1.2;
+h3,
+.h3 {
+  font-size: 47px;
+  line-height: 1;
 }
 
-h4 {
-  font-size: var(--base-font-size-xlarge);
-  line-height: 1.2;
+h4,
+.h4 {
+  font-size: 35px;
+  line-height: 1.1;
 }
 
-h5 {
-  font-size: var(--base-font-size);
+h5,
+.h5 {
+  font-size: 28px;
+  line-height: 1.2;
 }
 
 p {
@@ -45,4 +56,17 @@ p {
 
 .large-text {
   font-size: var(--base-font-size-xlarge);
+}
+
+.title__arrow {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  padding-top: 20px;
+
+  .icon {
+    width: 20px;
+    height: 20px;
+    fill: var(--color-black);
+  }
 }
