--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/variables.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/base/variables.css
@@ -10,7 +10,9 @@
   --color-black: #000;
   --color-white: #fff;
   --color-gray: #b0afaf;
-  --color-gray-light: #f5f5f5;
+  --color-gray-light: #fafafa;
+  --color-gray-light2: #eee;
+  --color-gray-medium: #333;
   --color-gray-dark: #272727;
   --color-gray-dark-1: #232323;
   --color-error: #f00;
@@ -19,13 +21,12 @@
   ********************/
   --theme-background-color: var(--color-white);
   --theme-color: var(--color-black);
+  --theme-text-color: #656565;
   --theme-button-background-color: var(--color-black);
+  --theme-button-hover-background-color: var(--color-primary);
   --theme-button-color: var(--color-white);
   --theme-link-color: var(--color-black);
   --theme-divider-background-color: var(--color-black);
-  --theme-accordion-border-color: #d4d4d4;
-  --theme-accordion-background-color: transparent;
-  --theme-accordion-text-color: var(--color-black);
   --theme-input-border: #e5e3de;
   --theme-input-color-marked: var(--color-primary);
   --theme-status-message-background-color: #c6c6c6;
@@ -38,7 +39,7 @@
 
   /* Typography
   ********************/
-  --base-font-family: "Roboto Slab", "sans-serif";
+  --base-font-family: "DM Sans", "sans-serif";
   --base-font-size-xxxlarge: 40px;
   --base-font-size-xxlarge: 30px;
   --base-font-size-xlarge: 25px;
@@ -47,13 +48,13 @@
   --base-font-size: 16px;
   --base-font-size-small: 14px;
   --base-font-size-extra-small: 12px;
-  --base-font-weight: 300;
-  --heading-font-family: "Roboto", "sans-serif";
+  --base-font-weight: 400;
+  --heading-font-family: "DM Sans", "sans-serif";
   --heading-font-weight: 700;
 
   /* Layout
   ********************/
-  --site-background-color: var(--color-white);
+  --site-background-color: var(--color-gray-light);
   --container-width: 1560px;
   --grid-section-spacing: 100px;
   --grid-section-spacing-mobile: calc(var(--grid-section-spacing) / 2);
@@ -68,7 +69,7 @@
 
   /* Header */
   --header-height: 95px;
-  --header-height-mobile: 80px;
+  --header-height-mobile: 70px;
 
   /* Meta menu */
   --meta-menu-height: 40px;
