--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/01-particles/input.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/01-particles/input.css
@@ -21,7 +21,10 @@
   appearance: none;
 
   &:focus {
-    border-color: var(--color-gray);
+    outline: 0;
+  }
+
+  &:focus-visible {
     outline: 0;
   }
 
