--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/burger.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/burger.css
@@ -9,34 +9,27 @@
   flex-shrink: 0;
   align-items: center;
   justify-content: center;
+  margin-left: 10px;
+  padding: 10px 5px;
   font-size: var(--base-font-size-extra-small);
   cursor: pointer;
 
-  @media (--viewport-md-min) {
-    margin-left: 20px;
+  @media (--viewport-lg-min) {
+    display: none;
   }
 
   &__lines {
     > span {
       display: block;
-      width: 40px;
-      height: 1px;
-      margin-bottom: 10px;
-      background-color: var(--color-primary);
+      width: 30px;
+      height: 2px;
+      margin-bottom: 6px;
+      background-color: var(--color-gray-medium);
+      border-radius: 2px;
 
       &:last-of-type {
         margin-bottom: 0;
       }
-    }
-  }
-
-  &__label {
-    margin-left: 15px;
-    font-weight: 300;
-    font-size: var(--base-font-size-extra-small);
-
-    @media (--viewport-md-min) {
-      display: none;
     }
   }
 }
