--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/image-slideshow.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/image-slideshow.css
@@ -7,11 +7,6 @@
   position: relative;
   width: 100%;
   outline: none;
-  cursor: grab;
-
-  .flickity-viewport {
-    overflow: hidden;
-  }
 }
 
 .image-slideshow {
@@ -19,13 +14,79 @@
   padding: 0;
   list-style: none;
   outline: none;
+  cursor: grab;
+
+  &__button-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    z-index: 2;
+    display: block;
+    width: 100%;
+    margin-top: -20px;
+
+    @media (--viewport-sm-min) {
+      margin-top: -24px;
+    }
+  }
+
+  &__button {
+    position: absolute;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+    cursor: pointer;
+    transition: opacity .2s ease-in-out;
+    -webkit-appearance: none; /* stylelint-disable-line */
+
+    @media (--viewport-sm-min) {
+      width: 48px;
+      height: 48px;
+    }
+
+    &.swiper-button-disabled {
+      opacity: .25;
+    }
+
+    svg.icon {
+      width: 24px;
+      height: 24px;
+      fill: var(--color-white);
+
+      @media (--viewport-sm-min) {
+        width: 32px;
+        height: 32px;
+      }
+    }
+
+    &--prev {
+      left: 0;
+
+      svg.icon {
+        transform: rotate(90deg);
+      }
+    }
+
+    &--next {
+      right: 0;
+
+      svg.icon {
+        transform: rotate(-90deg);
+      }
+    }
+  }
 }
 
 .image-slideshow-slide {
   position: relative;
   width: 100%;
-  height: 100vh;
-  max-height: 500px;
+  height: 0;
+  padding-bottom: 80%;
+
+  @media (--viewport-ms-min) {
+    padding-bottom: 56.25%;
+  }
 
   div:not(.contextual),
   picture,
@@ -35,42 +96,14 @@
     max-height: inherit;
   }
 
+  div,
   img {
-    width: 100%;
-    object-fit: cover;
-  }
-
-  &::before {
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
-    z-index: 1;
-    background-color: rgb(0 0 0 / 30%);
-    content: "";
-  }
-
-  &__content {
-    position: absolute;
-    bottom: 60px;
-    left: 50%;
-    z-index: 2;
-    width: 90%;
-    max-width: 800px;
-    color: white;
-    text-align: center;
-    transform: translateY(20px) translateX(-50%);
-    opacity: 0;
-    transition: all .7s .3s;
-    will-change: transform;
-  }
-
-  &.is-selected {
-    .image-slideshow-slide__content {
-      transform: translateY(0) translateX(-50%);
-      opacity: 1;
-    }
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 }
 
@@ -81,39 +114,29 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  text-align: center;
   list-style: none;
   outline: none;
 
-  &__dot {
+  .swiper-pagination-bullet {
+    position: relative;
+    display: inline-block;
     width: 8px;
     height: 8px;
-    margin-right: 20px;
-    background-color: white;
-    border-radius: 50%;
+    margin: 0 4px !important; /* stylelint-disable-line */
+    background: var(--color-white);
+    border-radius: 0;
     cursor: pointer;
     opacity: .5;
     transition: opacity .5s .1s;
 
-    &::before {
-      position: absolute;
-      top: 4px;
-      left: 4px;
-      width: 20px;
-      height: 20px;
-      border: solid 2px white;
-      border-radius: 50%;
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      transition: opacity .5s .1s;
-      content: "";
+    @media (--viewport-sm-min) {
+      margin: 0 8px !important; /* stylelint-disable-line */
     }
+  }
 
-    &.is-selected {
-      opacity: 1;
-
-      &::before {
-        opacity: .3;
-      }
-    }
+  .swiper-pagination-bullet-active {
+    background: var(--color-white);
+    opacity: 1;
   }
 }
