--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/navigation.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/navigation.css
@@ -4,35 +4,43 @@
  */
 
 .navigation {
+  position: relative;
   display: none;
   align-items: center;
+  justify-content: flex-start;
+  width: 100%;
   height: 100%;
-  margin: 0;
+  margin: 0 auto 0 0;
   padding: 0;
-  list-style: none;
+  background: none;
 
   @media (--viewport-lg-min) {
     display: flex;
   }
 }
 
+.navigation-list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .navigation-item {
+  position: relative;
   display: inline-flex;
   align-items: center;
   height: 100%;
-  margin: 0 10px;
+  margin: 0;
   color: var(--color-gray-dark-1);
   cursor: pointer;
 
-  @media (--viewport-lg-min) {
-    margin: 0 20px;
-  }
-
-  .icon--arrow-line-down {
+  .icon--chevron-down {
     display: none;
     width: 16px;
     height: 16px;
-    margin-left: 7px;
     fill: currentcolor;
   }
 
@@ -47,20 +55,43 @@
   }
 
   &--has-children {
-    .icon--arrow-line-down {
+    .icon--chevron-down {
       display: inline-block;
     }
   }
 
-  &.open-sub-navigation {
-    .sub-navigation {
-      transform: scaleY(1);
-      opacity: 1;
+  &.open-sub-navigation > .js-sub-navigation {
+    display: none;
+
+    &.is-hidden {
+      display: none;
+    }
+
+    &.is-visible {
+      display: block;
     }
   }
 
+  .fade-in {
+    animation: fade-in .3s forwards;
+  }
+
+  .fade-out {
+    animation: fade-out .3s forwards;
+  }
+
+  @keyframes fade-in {
+    from { opacity: 0; }
+    to { opacity: 1; }
+  }
+
+  @keyframes fade-out {
+    from { opacity: 1; }
+    to { opacity: 0; }
+  }
+
   &:hover,
-  &:focus {
+  &:focus-visible {
     .navigation-item__link {
       &::after {
         opacity: 1;
@@ -69,23 +100,42 @@
   }
 
   &__link {
-    position: relative;
+    display: block;
+    padding: 15px;
     color: currentcolor;
     font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
     text-decoration: none;
 
     &::after {
       position: absolute;
-      top: auto;
-      bottom: -10px;
-      left: 50%;
-      width: 9px;
-      height: 9px;
+      bottom: 10px;
+      left: 15px;
+      display: block;
+      width: 0;
+      height: 2px;
       background-color: var(--color-primary);
-      border-radius: 50px;
-      opacity: 0;
-      transition: opacity .3s;
+      transition: all .2s;
       content: "";
+
+      .open-sub-navigation & {
+        width: calc(100% - 30px);
+      }
+    }
+
+    &:hover,
+    &.is-active,
+    .navigation-item.active & {
+      &::after {
+        width: calc(100% - 30px);
+      }
+    }
+
+    &:hover,
+    &.is-active,
+    .navigation-item.active & {
+      opacity: 1;
     }
   }
 }
