--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/sub-navigation.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/02-molecules/sub-navigation.css
@@ -5,94 +5,91 @@
 
 .sub-navigation {
   position: absolute;
-  top: 100%;
+  top: calc(100% + 15px);
   left: 0;
-  width: 100%;
-  background-color: var(--color-white);
-  box-shadow: 0 25px 50px 0 rgb(0 0 0 / 10%);
-  transform: scaleY(0);
-  transform-origin: top;
+  display: none;
+  width: 225px;
+  padding: 15px 0;
+  background-color: var(--color-black);
+  box-shadow: 1px 1px 2px 0 rgb(0 0 0 / 20%);
   opacity: 0;
   transition: all .3s;
   will-change: transform;
 
-  &::before,
-  &::after {
-    position: absolute;
-    top: 0;
-    left: -50%;
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    background-color: inherit;
-    border-top: solid 1px var(--color-gray);
-    content: "";
-  }
-
-  &::after {
-    right: -50%;
-    left: auto;
-  }
-
   &__list {
-    display: flex;
-    flex-wrap: wrap;
-    border-left: solid 1px var(--color-gray);
-    transition: opacity .3s;
-
-    &.fade-enter,
-    &.fade-leave-to {
-      opacity: 0;
-    }
-
-    &.fade-enter-to,
-    &.fade-leave {
-      opacity: 1;
-    }
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
   }
 
-  &__item {
-    display: flex;
-    flex: 1 0 calc(100% / 6);
-    align-items: center;
-    justify-content: center;
-    height: 75px;
-    color: var(--color-primary);
-    font-weight: 700;
-    font-size: var(--base-font-size);
-    text-decoration: none;
-    border-color: var(--color-gray);
-    border-style: solid;
-    border-width: 1px 1px 1px 0;
+  &-item {
+    position: relative;
+    display: block;
 
-    &:nth-child(n+7) {
-      flex-grow: 0;
-      border-top: 0;
-    }
-
-    .icon--arrow-right {
-      width: 22px;
-      height: 22px;
-      margin-left: 10px;
-      padding: 5px;
-      border: solid 1px var(--color-primary);
-      border-radius: 50%;
-      transition: transform .3s;
-      will-change: transform;
-      fill: var(--color-primary);
+    .icon--chevron-down {
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      width: 12px;
+      height: 12px;
+      transform: rotate(-90deg) translateX(50%);
+      transition: all .2s;
+      fill: var(--color-gray);
     }
 
     &:hover,
     &:focus {
-      .icon--arrow-right {
-        transform: translateX(5px);
+      .icon--chevron-down {
+        fill: var(--color-white);
       }
+    }
+
+    .sub-navigation {
+      top: -15px;
+      left: 230px;
+    }
+  }
+}
+
+.sub-navigation__link {
+  display: inline-block;
+  padding: 10px 24px;
+  color: var(--color-gray);
+  font-weight: 400;
+  font-size: 15px;
+  text-decoration: none;
+  transition: all .2s;
+
+  &::after {
+    position: relative;
+    top: auto;
+    bottom: -2px;
+    left: 0;
+    display: block;
+    width: 0;
+    height: 2px;
+    background-color: var(--color-white);
+    transition: all .2s;
+    content: "";
+  }
+
+  &:hover,
+  &.is-active {
+    padding-left: 33px;
+    color: var(--color-white);
+
+    &::after {
+      width: 100%;
     }
   }
 
-  &__link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &:focus-visible {
+    padding-left: 33px;
+    color: var(--color-white);
+    outline: 0;
+
+    &::after {
+      width: 100%;
+    }
   }
 }
