--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/accordion.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/accordion.css
@@ -11,37 +11,56 @@
     margin-bottom: 25px;
   }
 
-  &__items + .button {
-    margin-top: 20px;
+  &__showmore-wrapper {
+    padding-top: 50px;
+    text-align: center;
+  }
+
+  &__showmore {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    font-size: 24px;
+    text-align: center;
+    cursor: pointer;
   }
 }
 
 .accordion-item {
-  color: var(--theme-accordion-text-color);
-  background-color: var(--theme-accordion-background-color);
-  border: 2px solid var(--theme-accordion-border-color);
-  border-radius: 10px;
+  position: relative;
+  color: var(--theme-color);
 
-  &.hide {
-    display: none;
+  &::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--theme-color);
+    opacity: .2;
+    content: "";
   }
 
-  &:not(:last-child) {
-    margin-bottom: 15px;
+  &.is-hidden {
+    display: none;
   }
 
   &__headline {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-height: 70px;
-    padding: 10px 30px;
+    width: 100%;
+    padding: 32px 0;
     cursor: pointer;
 
-    &.active {
+    .is-expanded & {
       .accordion-item__icon {
-        margin-top: 7px;
-        transform: rotate(-135deg);
+        &::after {
+          height: 0;
+        }
       }
     }
   }
@@ -49,21 +68,39 @@
   &__title {
     margin-bottom: 0;
     padding-right: 20px;
-    font-weight: 500;
-    font-size: var(--base-font-size-large);
-    line-height: 1.3;
+    font-weight: 700;
   }
 
   &__icon {
+    position: relative;
     flex-shrink: 0;
-    width: 14px;
-    height: 14px;
-    margin-top: -7px;
-    border: 2px solid var(--color-black);
-    border-top: 0;
-    border-left: 0;
-    transform: rotate(45deg);
+    width: 20px;
+    height: 20px;
     transition: transform .2s;
+
+    &::before,
+    &::after {
+      position: absolute;
+      display: block;
+      background-color: var(--theme-color);
+      content: "";
+    }
+
+    &::before {
+      top: calc(50% - 1px);
+      left: 0;
+      width: 100%;
+      height: 2px;
+    }
+
+    &::after {
+      top: 50%;
+      left: 50%;
+      width: 2px;
+      height: 100%;
+      transform: translate(-50%, -50%);
+      transition: transform .2s ease, height .2s ease, width .2s ease;
+    }
   }
 
   &__text {
@@ -80,14 +117,16 @@
     }
   }
 
-  &__content.active {
-    padding: 0 30px 20px;
+  &__content {
+    .is-expanded & {
+      padding: 7px 0 40px;
 
-    .accordion-item__text {
-      height: auto;
-      font-size: var(--base-font-size);
-      visibility: visible;
-      opacity: 1;
+      .accordion-item__text {
+        height: auto;
+        font-size: var(--base-font-size);
+        visibility: visible;
+        opacity: 1;
+      }
     }
   }
 }
