--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/search-overlay.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/components/03-organisms/search-overlay.css
@@ -5,44 +5,56 @@
 
 .search-overlay {
   position: fixed;
-  top: 0;
+  top: -50vh;
   left: 0;
-  z-index: 99999;
+  z-index: 502;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100vw;
-  height: 100vh;
+  height: 50vh;
+  padding-top: 80px;
   color: white;
-  background-color: rgb(0 0 0 / 90%);
-  opacity: 0;
-  transition: opacity .4s;
+  background-color: var(--color-white);
+  transition: all .4s;
   pointer-events: none;
 
   &__close {
-    position: absolute;
-    top: 40px;
-    right: 40px;
-    display: inline-flex;
-    flex-direction: column;
+    position: relative;
+    display: flex;
     align-items: center;
-    justify-content: flex-start;
-    font-size: var(--base-font-size);
+    justify-content: space-between;
+    color: var(--color-black);
+    font-weight: 400;
+    font-size: 17px;
     cursor: pointer;
 
-    .icon--close {
-      width: 60px;
-      height: 60px;
-      margin-bottom: 10px;
-      padding: 15px;
-      background-color: white;
-      border: solid 1px white;
-      border-radius: 50%;
+    &-label {
+      display: none;
+      margin-right: 15px;
+      opacity: .6;
+      transition: opacity .2s;
+
+      @media (--viewport-md-min) {
+        display: block;
+      }
     }
-  }
 
-  &__close-label {
-    display: none;
+    .icon--close {
+      width: 19px;
+      height: 19px;
+      transition: transform .4s;
+      fill: var(--color-black);
+    }
 
-    @media (--viewport-md-min) {
-      display: block;
+    &:hover {
+      .search-overlay__close-label {
+        opacity: 1;
+      }
+
+      .icon--close {
+        transform: rotate(180deg);
+      }
     }
   }
 
@@ -51,6 +63,34 @@
     top: 50%;
     width: 100%;
     transform: translateY(-50%);
+
+    form {
+      padding: 0 20px;
+    }
+  }
+
+  &__header {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 80px;
+    padding: 0 20px;
+
+    @media (--viewport-lg-min) {
+      padding: 0 55px;
+    }
+  }
+
+  &__logo {
+    .logo__image {
+      width: 100px;
+      height: 54px;
+      fill: var(--color-black);
+    }
   }
 
   &__input-field {
@@ -59,34 +99,48 @@
 
     .input {
       height: 65px;
-      padding-left: 25px;
-      color: white;
-      font-weight: 300;
-      font-size: var(--base-font-size-large);
+      padding: 0;
+      color: var(--color-black);
+      font-weight: 400;
+      font-size: 30px;
+      font-family: var(--font-family-body);
       background: transparent;
       border: 0;
-      border-bottom: solid 1px white;
+      border-bottom: 1px solid rgb(0 0 0 / 15%);
       outline: none;
+
+      @media (--viewport-md-min) {
+        height: 90px;
+      }
     }
   }
 
   &__submit {
     position: absolute;
     top: 50%;
-    right: 20px;
-    padding: 0;
+    right: -10px;
+    padding: 10px;
     transform: translateY(-50%);
     cursor: pointer;
 
     .icon--search {
-      width: 40px;
-      height: 40px;
-      fill: white;
+      width: 25px;
+      height: 25px;
+      opacity: .6;
+      transition: opacity .2s;
+      fill: var(--color-black);
+    }
+
+    &:hover {
+      .icon--search {
+        opacity: 1;
+      }
     }
   }
 
   &--open {
-    opacity: 1;
+    top: 0;
+    box-shadow: 0 1px 6px rgb(0 0 0 / 5%);
     pointer-events: auto;
   }
 }
