--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/theme/theme-yellow.css
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/css/theme/theme-yellow.css
@@ -7,12 +7,10 @@
   --theme-background-color: #f0cf61;
   --theme-color: #232323;
   --theme-button-background-color: #ebe8e1;
+  --theme-button-hover-background-color: #c2bfba;
   --theme-button-color: #232323;
   --theme-link-color: #232323;
   --theme-divider-background-color: #232323;
-  --theme-accordion-border-color: #f0cf61;
-  --theme-accordion-background-color: var(--color-white);
-  --theme-accordion-text-color: #232323;
   --theme-input-border: #232323;
   --theme-input-color-marked: #232323;
 }
