--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/twig/01-particles/svg-icon.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/assets/components/twig/01-particles/svg-icon.twig
@@ -1,5 +1,5 @@
 {% set directory = (not directory ? '' : directory ~ '/') %}
-{% set iconPath = (not iconPath ? directory ~ 'dist/icons/icons.svg' : iconPath) %}
+{% set iconPath = (not iconPath ? directory ~ 'dist/icons/icons.svg' : iconPath) ~ '?' ~ random() %}
 
 <svg{{ (not attributes ? create_attribute() : attributes).addClass(['icon', 'icon--' ~ svgIconName]) }}>
   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/{{ iconPath }}#{{ svgIconName }}"></use>
