--- a/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/layout/page.html.twig
+++ b/webroot/sites/premium.drupal.dk/themes/custom/premium/templates/layout/page.html.twig
@@ -113,14 +113,20 @@
   {% block page_burgermenu %}
     {{ page.burgermenu }}
   {% endblock %}
-
-  <div :class="{'search-overlay--open' : isOpen }" class="search-overlay" id="js-search-overlay">
-    <div @click="closeSearchOverlay()" class="search-overlay__close">
-      {% include '@reusable-component/svg-icon.twig' with {
-        'attributes': '',
-        'svgIconName': 'close'
-      } %}
-      <span class="search-overlay__close-label">{{ 'Close (Esc)'|t }}</span>
+  <div class="search-overlay js-search-overlay">
+    <div class="search-overlay__header">
+      <div class="search-overlay__logo">
+        <svg{{ (not attributes ? create_attribute() : attributes).addClass('logo__image') }}>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="/{{ directory }}/logo.svg"></use>
+        </svg>
+      </div>
+      <button class="search-overlay__close js-search-overlay__close" aria-label="Close search overlay">
+        <span class="search-overlay__close-label">{{ 'Close'|t }}</span>
+        {% include '@reusable-component/svg-icon.twig' with {
+          'attributes': '',
+          'svgIconName': 'close'
+        } %}
+      </button>
     </div>
     <div class="search-overlay__content">
       <div class="container">
@@ -129,7 +135,7 @@
             <label class="sr-only" for="js-search-overlay-input">{{ 'Search'|t }}</label>
             <input {{ create_attribute().addClass('input')
               .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t)
-              .setAttribute('placeholder', 'Search'|t)
+              .setAttribute('placeholder', 'Type words and hit enter'|t)
               .setAttribute('name', 'text')
               .setAttribute('id', 'js-search-overlay-input') }}>
             <button {{ create_attribute().setAttribute('type', 'submit').addClass('search-overlay__submit') }}>
